[metadata]
name = crawler
summary = Simple Social Netwrok Crawler
description-file = README.md
author = Dmitry Ukov
author-email = kemokd@gmail.com
home-page = http://example.com
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    crawler

[entry_points]
daemons:
    scheduler = crawler.scheduler:main
    worker = crawler.worker:main
